--- a/data/localization/ru.po
+++ b/data/localization/ru.po
@@ -1,88 +1,84 @@
-# ========== mods\SectorOverview\data\scripts\entity\sectoroverview.lua ==========
-#: mods\SectorOverview\data\scripts\entity\sectoroverview.lua:
-msgid "Sector Overview"
-msgstr "Обзор сектора"
-
-#: mods\SectorOverview\data\scripts\entity\sectoroverview.lua:
-msgid "Station List"
-msgstr "Список станций"
-
-#: mods\SectorOverview\data\scripts\entity\sectoroverview.lua:
-msgid "Gate List"
-msgstr "Список врат"
-
-#: mods\SectorOverview\data\scripts\entity\sectoroverview.lua:
-msgid "Player List"
-msgstr "Список игроков"
-
-#: mods\SectorOverview\data\scripts\entity\sectoroverview.lua:
-msgid "Show on Galaxy Map"
-msgstr "Показать на карте"
-
-#: mods\SectorOverview\data\scripts\entity\sectoroverview.lua:
-msgid "Add"
-msgstr "Добавить"
-
-#: mods\SectorOverview\data\scripts\entity\sectoroverview.lua:
-msgid "Add the selected player from the combo box to the list of tracked players."
-msgstr "Добавить выбранного игрока из выпадающего меню в список отслеживаемых игроков."
-
-#: mods\SectorOverview\data\scripts\entity\sectoroverview.lua:
-msgid "Remove the selected player from the list of tracked players."
-msgstr "Убрать выбранного игрока из списка отслеживаемых игроков."
-
-#: mods\SectorOverview\data\scripts\entity\sectoroverview.lua:
-msgid "Server doesn't allow to track players."
-msgstr "Сервер не разрешает отслеживать игроков."
-
-#: mods\SectorOverview\data\scripts\entity\sectoroverview.lua:
-msgid "Can't get coordinates, %s doesn't exist."
-msgstr "Не удается получить координаты, %s не существует."
-
-#: mods\SectorOverview\data\scripts\entity\sectoroverview.lua:
-msgid "Show the selected player on the galaxy map."
-msgstr "Показать выбранного игрока на карте галактики."
-
-#: mods\SectorOverview\data\scripts\entity\sectoroverview.lua:
-msgid "Ship List"
-msgstr "Список кораблей"
-
-#: mods\SectorOverview\data\scripts\entity\sectoroverview.lua:
+# ========== data\scripts\entity\sectoroverview.lua ==========
+#: data\scripts\entity\sectoroverview.lua:
+#: data\scripts\player\ui\sectorshipoverview.lua:
 msgid "Not owned"
 msgstr "Нет владельца"
 
-#: mods\SectorOverview\data\scripts\entity\sectoroverview.lua:
-msgid "Rectangles '█' near stations and ships names indicate relations with an owner faction.\n"
-"\n"
-"Green object name means that ship/station belongs to you.\n"
-"Purple - your alliance.\n"
-"Yellow - other players.\n"
-"Blue - other alliances.\n"
-"White - NPC factions."
-msgstr "Квадраты '█' рядом с именами станций и кораблей указывают на ваши отношения с владельцем.\n"
-"\n"
-"Зеленое имя объекта означает, что этот корабль/станция принадлежит вам.\n"
-"Фиолетовое - вашему альянсу.\n"
-"Желтое - другим игрокам.\n"
-"Синее - другим альянсам.\n"
-"Белое - НПС фракциям."
+#: data\scripts\entity\sectoroverview.lua:
+msgid "Sector Overview"
+msgstr "Обзор сектора"
 
-#: mods\SectorOverview\data\scripts\entity\sectoroverview.lua:
+#: data\scripts\entity\sectoroverview.lua:
+msgid "Station List"
+msgstr "Список станций"
+
+#: data\scripts\entity\sectoroverview.lua:
+msgid "Ship List"
+msgstr "Список кораблей"
+
+#: data\scripts\entity\sectoroverview.lua:
+msgid "Gate & Wormhole List"
+msgstr "Список врат и червоточин"
+
+#: data\scripts\entity\sectoroverview.lua:
+msgid "Player List"
+msgstr "Список игроков"
+
+#: data\scripts\entity\sectoroverview.lua:
+msgid "Show on Galaxy Map"
+msgstr "Показать на карте"
+
+#: data\scripts\entity\sectoroverview.lua:
+msgid "Add"
+msgstr "Добавить"
+
+#: data\scripts\entity\sectoroverview.lua:
+msgid "Add the selected player from the combo box to the list of tracked players."
+msgstr "Добавить выбранного игрока из выпадающего меню в список отслеживаемых игроков."
+
+#: data\scripts\entity\sectoroverview.lua:
+msgid "Remove the selected player from the list of tracked players."
+msgstr "Убрать выбранного игрока из списка отслеживаемых игроков."
+
+#: data\scripts\entity\sectoroverview.lua:
 msgid "Window width"
 msgstr "Ширина окна"
 
-#: mods\SectorOverview\data\scripts\entity\sectoroverview.lua:
+#: data\scripts\entity\sectoroverview.lua:
 msgid "Window height"
 msgstr "Высота окна"
 
-#: mods\SectorOverview\data\scripts\entity\sectoroverview.lua:
-msgid "Show NPC names"
-msgstr "Показывать имена НПС"
-
-#: mods\SectorOverview\data\scripts\entity\sectoroverview.lua:
+#: data\scripts\entity\sectoroverview.lua:
 msgid "Notify - enemy players"
 msgstr "Уведомлять - вражеские игроки"
 
-#: mods\SectorOverview\data\scripts\entity\sectoroverview.lua:
-msgid "Detected enemy ship %s (%s) in the sector!"
-msgstr "Обнаружен вражеский корабль %s (%s) в секторе!"
+#: data\scripts\entity\sectoroverview.lua:
+msgid "Show NPC names"
+msgstr "Показывать имена НПС"
+
+#: data\scripts\entity\sectoroverview.lua:
+msgid "Detected enemy ship '%s' (%s) in the sector!"
+msgstr "Обнаружен вражеский корабль '%s' (%s) в секторе!"
+
+#: data\scripts\entity\sectoroverview.lua:
+msgid "Server doesn't allow to track players."
+msgstr "Сервер не разрешает отслеживать игроков."
+
+#: data\scripts\entity\sectoroverview.lua:
+msgid "Can't get coordinates, %s doesn't exist."
+msgstr "Не удается получить координаты, %s не существует."
+
+#: data\scripts\entity\sectoroverview.lua:
+msgid "Colors of the object icons indicate ownership type:\n* Green - yours.\n* Purple - your alliance.\n* Yellow - other player.\n* Blue - other alliance.\n* White - NPC.\n\nObject name color represents relation status (war, ceasefire, neutral, allies)"
+msgstr "Цвета иконок объектов указывают на тип владельца:
+\n* Зеленый - ваше.
+\n* Фиолетовый - вашего альянса.
+\n* Желтый - другого игрока.
+\n* Синий - другого альянса.
+\n* Белый - НПС.
+\n
+\nЦвет имени объекта указывает на статус отношений (война, перемирие, нейтральное, союз)"
+
+#: data\scripts\entity\sectoroverview.lua:
+msgid "Show the selected player on the galaxy map."
+msgstr "Показать выбранного игрока на карте галактики."
